tooling/nargo_cli/tests/snapshots/execution_success/fold_basic/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "public"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : 2",
    "private parameters indices : [0]",
    "public parameters indices : [1]",
    "return value indices : []",
    "CALL func 1: PREDICATE = EXPR [ 1 ]",
    "inputs: [Witness(0), Witness(1)], outputs: [Witness(2)]",
    "func 1",
    "current witness index : 3",
    "private parameters indices : [0, 1]",
    "public parameters indices : []",
    "return value indices : [2]",
    "BRILLIG CALL func 0: inputs: [Single(Expression { mul_terms: [], linear_combinations: [(1, Witness(0)), (-1, Witness(1))], q_c: 0 })], outputs: [Simple(Witness(3))]",
    "EXPR [ (1, _0, _3) (-1, _1, _3) -1 ]",
    "EXPR [ (-1, _0) (1, _2) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "tY/NCoMwEITfZc85qGgpeZUikl9ZCEnIT6GEvHujKNhbe+htvxlmmC0gFc/rgla7CPRRwDjBEjrbqEC3S9Ezu1FMLCSg442AshLoNFUCGo1qZ1fnBjygMbgu15ImP1lAxo06UGcrLm56+dM58z44oWQOamvavUq+mTZ092Pb0I8f4wj0vwX++81c3w==",
  "file_map": {
    "50": {
      "source": "fn main(x: Field, y: pub Field) {\n    let z = foo(x, y);\n    let z2 = foo(x, y);\n    let z3 = foo(x, y);\n    assert(z == z2);\n    assert(z2 == z3);\n}\n\n#[fold]\nfn foo(x: Field, y: Field) -> Field {\n    assert(x != y);\n    x\n}\n",
      "path": ""
    }
  },
  "names": [
    "main",
    "foo"
  ],
  "brillig_names": [
    "directive_invert"
  ]
}
